tests/sumo/meso/junction_control/tls_coordination/bad/control.limited/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading done.
Simulation version v1_6_0+0805-8a20083101 started with time: 0.00
Simulation ended at time: 106.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 4ms
 Real time factor: 26500
 UPS: 219500.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 10.58
 Duration: 29.27
 WaitingTime: 1.78
 TimeLoss: 7.15
 DepartDelay: 0.00

